re PR tree-optimization/42730 (ice: verify_stmts failed)

2010-01-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42730
	* tree-ssa-ccp.c (maybe_fold_stmt_indirect): Add shortcut for
	offset zero.

	* gcc.c-torture/compile/pr42730.c: New testcase.

From-SVN: r155872